<resources>
    <string name="app_name">LOCKer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_scan">Scan</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_profile">Profile</string>
    <string name="search">Search</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="bookmark">Bookmark</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="back_to_welcome_page">Back to Welcome Page</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="next">Next</string>
    <string name="Success">Success</string>
    <string name="SuccessMsg">Welcome to LOCKer!</string>
    <string name="applied">Applied</string>
    <string name="saved">Saved</string>
    <string name="you_have_not">Look like you have not %1$s anything yet!</string>
    <string name="company_image">Company Image</string>
    <string name="requirements">Requirements</string>
    <string name="tab_scan_text">Scan Text</string>
    <string name="tab_scan_label">Scan Label</string>
    <string name="dummy_requirement">- Minimum 2 years working in experience in programming
        \n- Familiar with : HTML, CSS, PHP, Python, Java, Javascript
        \n- Database skill(s) : SQL, SQL Server
        \n- Ability to work under pressure
        \n- Fast learner and willing to learn
    </string>
    <string name="dummy_job_description">- Develop new web application or customize existing application
        \n- Learn new technology when required in the process
        \n- Problem solving and working with team on a project
        \n- Troubleshoot, fix bugs, and debug code-related issues
    </string>
    <string name="job_description">Job Description</string>
    <string name="bookmark_this_job">Bookmark this Job</string>
    <string name="icon">icon</string>
    <string name="dummy_company">PT Telmiz Indonesia</string>
    <string name="dummy_job_minimum_req">Minimum Qualification</string>
    <string name="dummy_job_place">On-site</string>
    <string name="dummy_job_position">Web Developer</string>
    <string name="dummy_job_type">Full time</string>
    <string name="dummy_job_location">Jakarta Barat</string>
    <string name="dummy_salary">Rp 8.000.000</string>
    <string name="apply_now">Apply Now</string>
    <string name="theme">Theme</string>
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="delete_course">Delete Course</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="dummy_long_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="dummy_news_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eu quam magna.</string>
    <string name="dummy_author">By Andi Wibowo</string>
    <string name="content_desc_article_image">Article Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recomendation">Recommendation</string>
    <string name="job_title">job title</string>
    <string name="job_field">job field</string>
    <string name="job_location">job location</string>
    <string name="job_time">job time</string>
    <string name="job_type">job type</string>
    <string name="salary">Rp x.xxx.xxx-x.xxx.xxx</string>
    <string name="image_highlight">Image Highlight</string>
    <string name="news">News</string>
    <string name="hi_user">Hi, Lorem</string>
    <string name="news_title">News Title</string>
    <string name="news_description">Hacksaw Ridge adalah film yang mengisahkan kisah nyata Desmond Doss (diperankan oleh
        Andrew Garfield), seorang penentang bersumpah yang mendaftar ke dalam tentara Amerika selama Perang Dunia II tanpa
        membawa senjata dan kemudian menjadi pahlawan medis lapangan di Pertempuran Okinawa, menyelamatkan puluhan nyawa
        tanpa pernah mengambil nyawa manusia, mempertaruhkan hidupnya untuk melakukan tindakan penyelamatan yang penuh
        pengorbanan di tengah pertempuran yang brutal, yang akhirnya memenangkannya Medali Kehormatan Amerika Serikat.</string>
    <string name="view_all">View All</string>
    <string name="user_name">Lorem Ipsum</string>
    <string name="loremexample_mail_com">loremexample@mail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="education">Education</string>
    <string name="user_education">Cambridge University</string>
    <string name="user_location">Indonesia</string>
    <string name="location">Location</string>
    <string name="city">City</string>
    <string name="manchester">Manchester</string>
    <string name="industry">Industry</string>
    <string name="user_industry">Technology, Information, and Internet</string>
    <string name="username">Username</string>
    <string name="setting">Setting</string>
    <string name="activity">Activity</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Your active email</string>
    <string name="hint_location">Confirm your location</string>
    <string name="hint_city">Example: Bandung</string>
    <string name="university_or_school">University or School</string>
    <string name="hint_univ">Enter University or School</string>
    <string name="major">Major</string>
    <string name="hint_major">Example: Computer Science</string>
    <string name="skill">Skill</string>
    <string name="add_skill">Add Skill</string>
    <string name="save">Save</string>
    <string name="about_me">About Me</string>
    <string name="computer_science">Computer Science</string>
    <string name="login_image">Login Image</string>
    <string name="register_image">register image</string>
    <string name="register_account">Register Account</string>
    <string name="let_s_create_your_account">Let\'s create your account!</string>
    <string name="great_to_see_you_again">Great to see you again!</string>
    <string name="login_account">Login Account</string>
    <string name="log_out">Logout</string>
    <string name="article">Article for you</string>
    <string name="save_this_job">Save this Job</string>
    <string name="article_image">Article Image</string>
    <string name="welcome_to_locker">Welcome to LOCKER</string>
    <string name="background">background</string>
    <string name="begin_your_journey_with_us">Begin your journey with us!</string>
    <string name="navigate_up">Navigate Up</string>
    <string name="fab_text">Tutorial</string>
    <string name="tutorial">Tutorial</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="explore">Explore</string>
    <string name="default_web_client_id">219059724934-ko8lm8cmomukp8gibi0ssbcunt6ueoj1.apps.googleusercontent.com</string>
</resources>