<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".screen.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_img_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="100dp">
            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/user"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/card_img_profile"
            app:layout_constraintTop_toTopOf="@id/card_img_profile"
            app:layout_constraintBottom_toTopOf="@id/tv_userEmail"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/user_name"/>

        <TextView
            android:id="@+id/tv_userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toEndOf="@id/card_img_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_userName"
            app:layout_constraintBottom_toBottomOf="@id/card_img_profile"
            android:textSize="16sp"
            android:text="@string/loremexample_mail_com"/>

        <Button
            android:id="@+id/btn_edit_profile"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/grey_less"
            android:text="@string/edit_profile"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="@id/card_img_profile"
            app:layout_constraintStart_toStartOf="@id/card_img_profile"
            app:layout_constraintTop_toBottomOf="@id/card_img_profile" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/card_img_profile"
            app:layout_constraintTop_toBottomOf="@id/btn_edit_profile"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/tv_user_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            android:textStyle="bold"
            android:text="@string/user_name"/>

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/card_img_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_user_full_name"
            android:text="@string/gender"/>

        <TextView
            android:id="@+id/tv_user_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_gender"
            app:layout_constraintTop_toBottomOf="@id/tv_gender"
            android:textStyle="bold"
            android:text="@string/male"/>

        <TextView
            android:id="@+id/tv_education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/card_img_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_user_gender"
            android:text="@string/education"/>

        <TextView
            android:id="@+id/tv_user_education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_education"
            app:layout_constraintTop_toBottomOf="@id/tv_education"
            android:textStyle="bold"
            android:text="@string/user_education"/>

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/card_img_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_user_education"
            android:text="@string/location"/>

        <TextView
            android:id="@+id/tv_user_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_location"
            app:layout_constraintTop_toBottomOf="@id/tv_location"
            android:textStyle="bold"
            android:text="@string/user_location"/>

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/card_img_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_user_location"
            android:text="@string/city"/>

        <TextView
            android:id="@+id/tv_user_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_city"
            app:layout_constraintTop_toBottomOf="@id/tv_city"
            android:textStyle="bold"
            android:text="@string/manchester"/>

        <TextView
            android:id="@+id/tv_industry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/card_img_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_user_city"
            android:text="@string/industry"/>

        <TextView
            android:id="@+id/tv_user_industry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_industry"
            app:layout_constraintTop_toBottomOf="@id/tv_industry"
            android:textStyle="bold"
            android:text="@string/user_industry"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>