<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.locker.screen.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.locker.screen.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.locker.screen.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" >
        <action
            android:id="@+id/action_navigation_scan_to_resultFragment"
            app:destination="@id/resultFragment" />
        <action
            android:id="@+id/action_navigation_scan_to_historyScanFragment"
            app:destination="@id/historyScanFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.example.locker.screen.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.locker.screen.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.locker.screen.result.ResultFragment"
        android:label="fragment_result"
        tools:layout="@layout/fragment_result" >
        <action
            android:id="@+id/action_resultFragment_to_navigation_scan"
            app:destination="@id/navigation_scan" />
        <action
            android:id="@+id/action_resultFragment_to_historyScanFragment"
            app:destination="@id/historyScanFragment" />
    </fragment>
    <fragment
        android:id="@+id/historyScanFragment"
        android:name="com.example.locker.screen.history.HistoryScanFragment"
        android:label="fragment_history_scan"
        tools:layout="@layout/fragment_history_scan" >
        <action
            android:id="@+id/action_historyScanFragment_to_resultFragment"
            app:destination="@id/resultFragment" />
        <action
            android:id="@+id/action_historyScanFragment_to_navigation_scan"
            app:destination="@id/navigation_scan" />
    </fragment>
</navigation>