<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/img_job"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/user"
            android:scaleType="centerCrop"
            android:contentDescription="@string/job_title" />

        <TextView
            android:id="@+id/tv_news_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/img_job"
            app:layout_constraintStart_toEndOf="@id/img_job"
            app:layout_constraintBottom_toTopOf="@id/tv_news_description"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/news_title"/>

        <TextView
            android:id="@+id/tv_news_description"
            android:layout_width="0dp"
            android:layout_height="69dp"
            android:text="@string/news_description"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/img_job"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_news_title"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@id/tv_news_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>